plugins{
    id 'nva.search.service.rootplugin'
}

//workaround for jacoco-merge to work
allprojects{
    apply plugin: 'nva.search.service.java-conventions'
}

tasks.withType(JavaCompile) {
    options.release = 17
}
wrapper {
    gradleVersion = '8.2.1'
    distributionType = Wrapper.DistributionType.ALL
}
